变更自建博客框架内容
去除多语言模式，简化项目结构

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-blog",
-  "description": "一个技术、阅读、认知类的博客",
-  "version": "1.0.0",
+  "name": "my-blogs",
+  "description": "This is a blog project",
+  "version": "2.0.0",
   "license": "MIT",
   "type": "module",
   "scripts": {
