--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,7 @@
 {
   "newFileLocation": "folder",
-  "newFileFolderPath": "notes"
+  "newFileFolderPath": "notes",
+  "strictLineBreaks": true,
+  "attachmentFolderPath": "annexes",
+  "useMarkdownLinks": true
 }
